<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_loginEmail"
        android:layout_width="350dp"
        android:layout_height="54dp"
        android:layout_marginTop="288dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_loginPassword"
        android:layout_width="350dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_loginEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_text_loginEmail"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_loginEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_loginSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_activity"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_loginPassword"
        app:layout_constraintStart_toStartOf="@+id/edit_text_loginPassword"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_loginPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>