<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeacherCreateAccountActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_teacherName"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/nome_completo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sendFormTeacherCreateAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/criar_conta"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_teacherPassword"
        app:layout_constraintStart_toStartOf="@+id/edit_text_teacherPassword"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_teacherPassword" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_teacherPassword"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/user"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_teacherEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_text_teacherEmail"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_teacherEmail" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_teacherUser"
        android:layout_width="311dp"
        android:layout_height="63dp"
        android:hint="@string/user"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_teacherUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_text_teacherUser"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_teacherUser" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_teacherEmail"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView4"
        android:layout_width="42dp"
        android:layout_height="15dp"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_teacherName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_text_teacherName"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_teacherName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>